objects/Learning_Category__c.object
<CustomObject>
    <description>Created By :- Veeresh Alur
Date: 27-Feb-14
Capability: ES Social Learning Platform
Release: 2
Description: Learning Categories</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Sequence_Nbr__c</fullName>
        <label>Display Sequence Nbr</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Learning Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Name__c</columns>
        <columns>Description__c</columns>
        <columns>Display_Sequence_Nbr__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LC-{00000000}</displayFormat>
        <label>Learning Category ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Categories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>